--- a/translations/messages.bg.yaml
+++ b/translations/messages.bg.yaml
@@ -70,6 +70,15 @@ homepage:
             text: 'Отлично обслужване! Барберите са високо квалифицирани и атмосферата е много професионална. Редовен съм клиент повече от година.'
             name: 'Иван Петров'
             role: 'Редовен клиент'
+    team:
+        subtitle: 'Нашият екип'
+        title: 'Запознайте се с нашите експерти'
+        member1:
+            name: 'Джони Браво'
+            role: 'Master Barber'
+        member2:
+            name: 'Тони Монтана'
+            role: 'Barber'
 
 
 # base_iframe.html.twig
