--- a/translations/messages.bg.yaml
+++ b/translations/messages.bg.yaml
@@ -441,11 +441,13 @@ guest_confirm:
     cancel_text: "Ако искате да <strong>отмените</strong> резервацията, кликнете"
     cancel_here: "тук"
     tip: "Съвет"
-    tip_desc: "Ако желаете да следите вашите резервации и да имате достъп до повече функции, можете да <a href=\"{{ url('app_register') }}\" style=\"color: #0c5460; font-weight: bold;\">създадете безплатен акаунт</a>."
+    tip_desc: "Ако желаете да следите вашите резервации и да имате достъп до повече функции, можете да създадете безплатен акаунт "
+    tip_here: ": тук!"
     see_you: "Очакваме ви с нетърпение!"
     regards: "Поздрави,"
     team: "Екипът на Barber Shop"
     validity: "Този линк за потвърждение е валиден 24 часа."
+    question: "За въпроси: "
 
 
 # base.html.twig
@@ -559,6 +561,7 @@ profile:
         nickname_help: "По желание. Ако е празно ще използваме вашето име."
         phone: "Телефон"
         member_since: "Член от"
+        error: "Грешка"
     password:
         title: "Промяна на парола"
         important: "Важно"
